# fixlog

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/commands/: fixture-check.md  phase-task.md  validate.md
crates/fixlog-analysis/: Cargo.toml
crates/fixlog-analysis/benches/: analysis.rs
crates/fixlog-analysis/src/: histogram.rs  lib.rs  orders.rs  orders_consolidated.rs  sessions.rs  util.rs
crates/fixlog-analysis/tests/: pipe_separated.rs  real_fixtures.rs
crates/fixlog-cli/: Cargo.toml
crates/fixlog-cli/src/: io.rs  main.rs
crates/fixlog-cli/src/commands/: grep.rs  histogram.rs  mod.rs  orders.rs  orders_consolidate.rs  parse.rs  sessions.rs  sniff.rs  stats.rs  tui.rs
crates/fixlog-cli/tests/: grep.rs  orders_consolidate.rs
crates/fixlog-core/: Cargo.toml
crates/fixlog-core/src/: lib.rs
crates/fixlog-dict/: Cargo.toml  build.rs
crates/fixlog-dict/src/: generated.rs  groups.rs  lib.rs  resolver.rs
crates/fixlog-dict/tests/: dict.rs
crates/fixlog-format/: Cargo.toml
crates/fixlog-format/src/: lib.rs  sniffer.rs
crates/fixlog-index/: Cargo.toml
crates/fixlog-index/benches/: index.rs
crates/fixlog-index/src/: builder.rs  lib.rs  parallel.rs  secondary.rs
crates/fixlog-index/tests/: real_fixtures.rs
crates/fixlog-parser/: Cargo.toml
crates/fixlog-parser/benches/: parse.rs
crates/fixlog-parser/src/: lib.rs  tokenizer.rs  validator.rs
crates/fixlog-parser/tests/: synthetic.rs  with_format.rs
crates/fixlog-query/: Cargo.toml
crates/fixlog-query/src/: ast.rs  eval.rs  lib.rs  parser.rs
crates/fixlog-render/: Cargo.toml
crates/fixlog-render/src/: lib.rs
crates/fixlog-render/tests/: smoke.rs
crates/fixlog-tui/: Cargo.toml
crates/fixlog-tui/benches/: frame.rs
crates/fixlog-tui/src/: app.rs  clipboard.rs  command.rs  event.rs  export.rs  follow.rs  input.rs  io.rs  lib.rs  search.rs  state.rs  summary.rs  terminal.rs  theme.rs
crates/fixlog-tui/src/view/: command.rs  consolidated.rs  detail.rs  diff.rs  help.rs  histogram.rs  list.rs  marks.rs  mod.rs  orders.rs  search.rs  sessions.rs  status.rs
crates/fixlog-tui/tests/: bootstrap.rs  command.rs  display_toggles.rs  focus.rs  help.rs  horizontal_scroll.rs  navigation.rs  search.rs  yank.rs
docs/: ARCHITECTURE.md  PHASE1_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE4_PLAN.md  PHASE5_PLAN.md  ROADMAP.md  architecture.md  conventions.md  runbook.md
docs/agent/: INDEX.md  patterns.md  state.md
docs/agent/crates/: analysis.md  cli.md  core.md  dict.md  format.md  index.md  parser.md  query.md  tui.md
docs/agent/reference/: fix-protocol.md  fixtures.md
docs/decisions/: _index.md
docs/features/: _index.md  interactive-tui.md  order-analysis-consolidation.md  parsing-and-format.md  query-grep-tailing.md
docs/postmortems/: _index.md
fixtures/: README.md
