[workspace]
resolver = "2"
members  = []

[workspace.package]
edition      = "2024"
rust-version = "1.95"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/alanvazquez/fixlog"
authors      = ["Alan Vazquez <alan@trii.co>"]

[profile.release]
lto           = true
codegen-units = 1
