[workspace]
resolver = "2"
members  = [
    "crates/fixlog-analysis",
    "crates/fixlog-cli",
    "crates/fixlog-core",
    "crates/fixlog-dict",
    "crates/fixlog-format",
    "crates/fixlog-index",
    "crates/fixlog-parser",
    "crates/fixlog-query",
    "crates/fixlog-tui",
]

[workspace.package]
edition      = "2024"
rust-version = "1.95"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/alanvazquez/fixlog"
authors      = ["Alan Vazquez <alan@trii.co>"]

[profile.release]
lto           = true
codegen-units = 1
