[package]
name         = "fixlog-analysis"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description  = "Session tracking, order lifecycle, and temporal histogram analysis over FIX logs."

[dependencies]
fixlog-core = { path = "../fixlog-core" }
rayon       = "1"
smallvec    = "1"
thiserror   = "2"
tracing     = "0.1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name    = "analysis"
harness = false
