[package]
name         = "fixlog-cli"
version      = "0.2.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description  = "CLI for inspecting FIX log files."

[[bin]]
name = "fixlog"
path = "src/main.rs"

[dependencies]
fixlog-analysis   = { path = "../fixlog-analysis" }
fixlog-core       = { path = "../fixlog-core" }
fixlog-tui        = { path = "../fixlog-tui" }
anyhow            = "1"
clap              = { version = "4", features = ["derive"] }
memmap2           = "0.9"
notify            = "7"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
