[package]
name         = "fixlog-core"
version      = "0.2.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description  = "Facade crate that re-exports fixlog-format, fixlog-parser, and fixlog-dict."

[dependencies]
fixlog-dict   = { path = "../fixlog-dict" }
fixlog-format = { path = "../fixlog-format" }
fixlog-index  = { path = "../fixlog-index" }
fixlog-parser = { path = "../fixlog-parser" }
fixlog-query  = { path = "../fixlog-query" }
