[package]
name         = "fixlog-format"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description  = "Detects the layout (separator, line prefix, encoding) of a FIX log file."

[dependencies]
memchr    = "2"
thiserror = "2"
tracing   = "0.1"
