[package]
name        = "fixlog-index"
version     = "0.2.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Offset-based index over a FIX log buffer, with append-only growth."

[dependencies]
fixlog-format = { path = "../fixlog-format" }
fixlog-parser = { path = "../fixlog-parser" }
rayon         = "1"
smallvec      = "1"
thiserror     = "2"
tracing       = "0.1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name    = "index"
harness = false
