[package]
name         = "fixlog-parser"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description  = "Zero-copy FIX protocol tokenizer and raw message types."

[dependencies]
smallvec  = "1"
thiserror = "2"
tracing   = "0.1"
