[package]
name         = "fixlog-parser"
version      = "0.2.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description  = "Zero-copy FIX protocol tokenizer and raw message types."

[dependencies]
fixlog-format = { path = "../fixlog-format" }
memchr        = "2"
smallvec      = "1"
thiserror     = "2"
tracing       = "0.1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name    = "parse"
harness = false
