[package]
name        = "fixlog-query"
version     = "0.2.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Filter DSL (AST, parser, evaluator) over FIX RawMessage."

[dependencies]
fixlog-parser = { path = "../fixlog-parser" }
regex         = "1"
thiserror     = "2"
