[package]
name        = "fixlog-tui"
version     = "0.3.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Interactive ratatui frontend for fixlog — virtual list, live filter, follow/browse modes."

[dependencies]
fixlog-analysis = { path = "../fixlog-analysis" }
fixlog-core     = { path = "../fixlog-core" }
anyhow          = "1"
arboard         = "3"
crossterm       = "0.28"
memmap2         = "0.9"
ratatui         = "0.29"
thiserror       = "2"
tracing         = "0.1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile  = "3"

[[bench]]
name    = "frame"
harness = false
